# cally-examples

./: LICENSE.md  README.md  cally-examples.code-workspace
minimal/: README.md  cally.yaml  pyproject.toml
minimal/cally/idp/: defaults.py
minimal/cally/idp/resources/: random.py
minimal/cally/idp/stacks/: example.py
minimal/tests/: test_cli.py  test_minimal.py
minimal/tests/testdata/: example.json  random-pets.json
opinionated/: .gitignore  pyproject.toml
opinionated/cally/idp/: defaults.py
opinionated/cally/idp/stacks/: pets.py
opinionated/tests/: test_cli.py  test_stacks.py
