[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-idp"
version = "0.1.0"
dependencies = ["cally"]
requires-python = ">=3.8"
authors = [
  {name = "Example Org"},
]
description = "Example Cally Extension"

[tool.setuptools.packages.find]
include=["cally.*"]

[project.optional-dependencies]
test = [
  "pytest"
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-p no:cacheprovider"
filterwarnings = [
    "ignore",
    "default:::cally.*",
    "default:::tests.*"
]
